# nedc-bench

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AI_AGENT_REVIEW_FINAL.md  ALPHA_WRAPPER_P0_BUG.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_PROPOSAL.md  CHANGELOG.md  CLAUDE.md  CLI_DEBT.md  CURRENT_STATUS.md  DOD_CHECKLIST.md  DOD_COMPLETION_REPORT.md  Dockerfile.api  EPOCH_P0_BUG.md  EPOCH_PARITY_INVESTIGATION.md  FINAL_PARITY_RESULTS.md  FINAL_PARITY_STATUS.md  LICENSE  MIGRATION_PLAN.md  Makefile  NEDC_BENCH_IMPLEMENTATION_PLAN.md  NEDC_EEG_EVAL_ANALYSIS.md  NEDC_TAES_EXACT_ALGORITHM.md  P0_CRITICAL_BUG_DURATION.md  PARITY_TESTING_SSOT.md  PHASE_1_FOUNDATION.md  PHASE_2_BETA_TAES_CORRECTED.md  PHASE_2_FIRST_ALGORITHM.md  PHASE_3_CORE_ALGORITHMS.md  PHASE_4_API_LAYER.md  PHASE_5_PRODUCTION.md  PHASE_5_PRODUCTION_LEAN.md  README copy.md  README.md  README_COPY.md  README_INSERT.md  README_V2.md  (+18 more)
.github/workflows/: alpha-pipeline.yml  api.yml  ci.yml
alpha/: Dockerfile  requirements.txt
alpha/wrapper/: __init__.py  nedc_wrapper.py  parsers.py
docs/: ALPHA_WRAPPER_P0_BUG.md  BUG_2_EPOCH_DEEP_ANALYSIS.md  CRITICAL_BUGS_ALL_ALGORITHMS.md  DOCUMENTATION_STRUCTURE.md  EPOCH_PARITY_INVESTIGATION.md  NEDC_EEG_EVAL_ANALYSIS.md  PHASE_1_FOUNDATION.md  PHASE_3_CORE_ALGORITHMS.md  README.md  SZCORE_ANALYSIS.md  deployment.md  installation.md  quickstart.md  runbook.md
docs/algorithms/: dp-alignment.md  epoch.md  ira.md  metrics.md  overlap.md  overview.md  taes.md
docs/api/: endpoints.md  examples.md  openapi.md  python-client.md  websocket.md
docs/archive/: CRITICAL_BUGS_ALL_ALGORITHMS.md  IRA_KAPPA_FIX.md  OUTDATED_DOCS_INDEX.md  P0_CRITICAL_BUG_DURATION.md  PARITY_TESTING_SSOT.md  PHASE_2_BETA_TAES_CORRECTED.md  PHASE_4_API_LAYER.md
docs/archive/bugs/: ALPHA_WRAPPER_P0_BUG.md  BUG_2_EPOCH_DEEP_ANALYSIS.md  CRITICAL_BUGS_ALL_ALGORITHMS.md  EPOCH_BUG_FIXED.md  EPOCH_P0_BUG.md  EPOCH_PARITY_INVESTIGATION.md  FINAL_PARITY_RESULTS.md  FINAL_PARITY_STATUS.md  IRA_KAPPA_FIX.md  NEDC_BENCH_IMPLEMENTATION_PLAN.md  NEDC_EEG_EVAL_ANALYSIS.md  NEDC_TAES_EXACT_ALGORITHM.md  P0_CRITICAL_BUG_DURATION.md  PARITY_TESTING_SSOT.md  TAES_INVESTIGATION.md  TRUE_ALPHA_BETA_SCORES.md
docs/archive/bulid_implementation/: PHASE_1_FOUNDATION.md  PHASE_2_BETA_TAES_CORRECTED.md  PHASE_3_CORE_ALGORITHMS.md  PHASE_4_API_LAYER.md  PHASE_5_PRODUCTION.md  REFACTOR_COMPLETION_REPORT.md
docs/archive/status/: AI_AGENT_REVIEW_FINAL.md  CURRENT_STATUS.md  DOCUMENTATION_STRUCTURE.md  DOD_CHECKLIST.md  DOD_COMPLETION_REPORT.md  OUTDATED_DOCS_INDEX.md
docs/archive/technical/: SZCORE_ANALYSIS.md
docs/deployment/: configuration.md  docker.md  kubernetes.md  monitoring.md  overview.md  runbook.md  scaling.md  troubleshooting.md
docs/developer/: architecture.md  benchmarking.md  code-style.md  contributing.md  debugging.md  testing.md
docs/migration/: data-formats.md  from-nedc.md  upgrade-guide.md
docs/reference/: api.md  changelog.md  cli.md  configuration.md  faq.md  glossary.md
docs/user-guide/: overview.md
k8s/: deployment-secure.yaml  deployment.yaml  network-policy.yaml  redis-secure.yaml  redis.yaml  service.yaml
literature/docx/: picone-2021-objective-evaluation-metrics.docx
literature/markdown/: picone-2021-objective-evaluation-metrics.md
monitoring/: metrics.py  prometheus.yml
nedc_bench/: __init__.py
nedc_bench/algorithms/: dp_alignment.py  epoch.py  ira.py  overlap.py  taes.py  taes_exact.py
nedc_bench/api/: __init__.py  docs.py  main.py
nedc_bench/api/endpoints/: evaluation.py  health.py  metrics.py  (+1 more)
nedc_bench/models/: annotations.py
nedc_bench/monitoring/: metrics.py  prometheus.yml
nedc_bench/orchestration/: dual_pipeline.py  parallel.py  performance.py
nedc_bench/utils/: metrics.py  params.py
nedc_bench/validation/: __init__.py  parity.py
nedc_eeg_eval/v6.0.0/: AAREADME.txt  requirements.txt
scripts/: CLEANUP_ANALYSIS.md  README.md  alpha_beta_totals.py  compare_parity.py  create_correct_lists.py  create_file_lists.py  create_runtime_lists.py  debug_epoch_scaling.py  debug_ira_difference.py  debug_overlap.py  debug_parity_calculation.py  debug_taes_exact.py  localize_epoch_mismatches.py  parity_test_direct.py  parse_alpha_results.py  release.sh  run_alpha_batch.sh  run_alpha_complete.py  run_beta_batch.py  run_beta_ira.py  run_parity_test.py  run_single_algo_parity.py  run_true_parity_test.py  test_duration_fix.py  test_epoch_augmentation.py  test_epoch_fix.py  test_ira_with_augmentation.py  test_parity_now.py  test_parity_subset.py  ultimate_parity_test.py  verify_all_algorithms_parity.py  verify_parity.py  verify_parity_fixed.py
src/alpha/: requirements.txt
tests/: __init__.py  conftest.py  test_alpha_environment.py  test_beta_models.py  test_dual_pipeline.py  test_duration_calculation.py  test_integration_parity.py  test_nedc_wrapper.py  test_output_parser.py  test_parity_multi_match.py  test_parity_validator.py  test_phase2_integration.py  test_taes_algorithm.py  utils.py
tests/algorithms/: test_algorithm_edge_cases.py  test_algorithm_error_paths.py  test_core_edge_cases.py  test_dp_alignment.py  test_epoch.py  test_epoch_additional.py  test_epoch_sampling_boundary.py  test_ira.py  test_ira_additional.py  test_ira_equivalence.py  test_overlap.py  test_overlap_boundaries.py  test_taes_extras.py
tests/api/: test_async_orchestration.py  test_async_wrapper.py  test_cache_performance.py  test_error_handler.py  test_file_validation.py  test_health_ready_metrics_and_rate_limit.py  test_integration.py  test_job_manager_and_processor.py  test_load.py  test_progress_tracker.py  test_websocket_manager.py
tests/golden/: test_exact_match.py
tests/models/: test_beta_models.py  test_duration_calculation.py
tests/orchestration/: test_phase2_integration.py
tests/validation/: test_dp_summary_mapping.py  test_integration_parity.py  test_parity_all_algorithms.py  test_parity_multi_match.py  test_parity_validator.py
vlp/: summary.txt  summary_dpalign.txt  summary_epoch.txt  summary_ovlp.txt  summary_taes.txt
(+119 files in other folders)
